--- a/scroll-kit.css
+++ b/scroll-kit.css
@@ -1,9 +1,35 @@
 /* this reset is required in order to avoid positioning issues */
 * { box-sizing: border-box; }
 
+/* encouraged css-properties to apply */
 .has-stickies { position: relative; overflow: auto; }
 .has-stickies.floating { overflow: hidden; }
 
 .is-sticky { z-index: 1.1; }
 .is-sticky.stuck { z-index: 1.2; }
 .is-sticky.stuck.bottom { z-index: 1.0; }
+
+/* debug only */
+#scroll-kit-info {
+  border-radius: 0 0 5px 0;
+  background: rgba(0, 0, 0, .6);
+  color: #FFFFFF;
+  text-shadow: 1px 1px 1px #000000;
+  position: fixed;
+  padding: 10px;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  font-size: 13px;
+}
+
+#scroll-kit-info .gap {
+  top: -1;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  position: fixed;
+  border-bottom: 1px dotted red;
+}
+
+#scroll-kit-info label { line-height: 20px; }
